Fix for bug#11057 information_schema: columns table has some questionable contents   fixed BLOB, TEXT(wrong maximum length), BIT and integer types(wrong numeric_precision value)